fix: Address 5 SonarQube issues
Fixed issues:
- AZjr5wEC9TChwHguyc6q for java:S6126 rule
- AZjr5wEC9TChwHguyc6r for java:S6204 rule
- AZjr5wEC9TChwHguyc6s for java:S6204 rule
- AZjr5wEC9TChwHguyc6u for java:S6204 rule
- AZjr5wEC9TChwHguyc6v for java:S6204 rule

Generated by SonarQube Agent (task: f99642e8-1564-4466-956b-48b8a6d33440)