@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.api.io.TempDir;
@@ -75,25 +74,27 @@ class FileUtilsTests {
 
   @Test
   void getTextRangeContentOfFileTest() {
-    var content = "package devoxx.vulnerability;\n" +
-      "\n" +
-      "import java.sql.Connection;\n" +
-      "import java.sql.SQLException;\n" +
-      "import java.sql.Statement;\n" +
-      "\n" +
-      "public class InjectionVulnerability {\n" +
-      "  final static String SELECT_SQL = \"select FNAME, LNAME, SSN from USERS where UNAME = \";\n" +
-      "\n" +
-      "  public InjectionVulnerability(String taintedString) throws SQLException {\n" +
-      "    Connection con = DatabaseHelper.getJDBCConnection();\n" +
-      "    Statement stmt = con.createStatement();\n" +
-      "    int i = 0;\n" +
-      "    stmt.execute(SELECT_SQL + taintedString); // Noncompliant\n" +
-      "  }\n" +
-      "}\n";
+    var content = """
+      package devoxx.vulnerability;
 
-    var textRangeContent = getTextRangeContentOfFile(content.lines().collect(Collectors.toList()), new TextRangeDto(12, 21, 12, 42));
-    var multiLineTextRangeContent = getTextRangeContentOfFile(content.lines().collect(Collectors.toList()), new TextRangeDto(12, 21, 14, 60));
+      import java.sql.Connection;
+      import java.sql.SQLException;
+      import java.sql.Statement;
+
+      public class InjectionVulnerability {
+        final static String SELECT_SQL = "select FNAME, LNAME, SSN from USERS where UNAME = ";
+
+        public InjectionVulnerability(String taintedString) throws SQLException {
+          Connection con = DatabaseHelper.getJDBCConnection();
+          Statement stmt = con.createStatement();
+          int i = 0;
+          stmt.execute(SELECT_SQL + taintedString); // Noncompliant
+        }
+      }
+      """;
+
+    var textRangeContent = getTextRangeContentOfFile(content.lines().toList(), new TextRangeDto(12, 21, 12, 42));
+    var multiLineTextRangeContent = getTextRangeContentOfFile(content.lines().toList(), new TextRangeDto(12, 21, 14, 60));
 
     assertThat(getTextRangeContentOfFile(emptyList(), null)).isNull();
     assertThat(textRangeContent).isEqualTo("con.createStatement()");
@@ -107,8 +108,8 @@ class FileUtilsTests {
       "\n" +
       "// TODO implement the TODO bellow\n" +
       "// TODO implement this class";
-    var textRangeContent = getTextRangeContentOfFile(content.lines().collect(Collectors.toList()), new TextRangeDto(3, 0, 2, 666));
-    var multiLineTextRangeContent = getTextRangeContentOfFile(content.lines().collect(Collectors.toList()), new TextRangeDto(3, 0, 4, 666));
+    var textRangeContent = getTextRangeContentOfFile(content.lines().toList(), new TextRangeDto(3, 0, 2, 666));
+    var multiLineTextRangeContent = getTextRangeContentOfFile(content.lines().toList(), new TextRangeDto(3, 0, 4, 666));
 
     assertThat(textRangeContent).isEqualTo("// TODO implement the TODO bellow" + System.lineSeparator());
     assertThat(multiLineTextRangeContent).isEqualTo("// TODO implement the TODO bellow" + System.lineSeparator()
